--- a/styles.css
+++ b/styles.css
@@ -54,8 +54,8 @@ a {
     right: 0;
     height: 8em;
     background-image: linear-gradient(var(--blurColor1), var(--blurColor2));
-    backdrop-filter: blur(1.5px);
-    -webkit-backdrop-filter: blur(1.5px);
+    backdrop-filter: blur(1.3px);
+    -webkit-backdrop-filter: blur(1.3px);
 
     transition: --blurColor1 0.5s, --blurColor2 0.5s;
   }
@@ -130,7 +130,7 @@ a {
     left: 50%; /* Center the pseudo-element */
     bottom: 5px; /* Position below the link */
     transform: translateX(-50%); /* Center align the pseudo-element */
-    width: 50px; /* Width of the circular line */
+    width: 80px; /* Width of the circular line */
     height: 3px; /* Height/thickness of the line */
     background-color: var(--text-color); /* Color of the line */
     border-radius: 15px; /* Creates the circular effect */
@@ -139,12 +139,9 @@ a {
 }
 
 /* Main Content Styling */
-.main_content{
-    text-align: center;
+.main-content{
     padding-top: 10em;
     padding-bottom: 2em; 
-    max-width: 55em; /* Max content width */
-    margin: auto; /* Centers the main content */
     z-index: 1;
 
     transition: color 0.5s;
@@ -208,6 +205,16 @@ footer {
 
 
 /*index styles*/
+
+.nav-links .home.current-page::before {
+    width: 55px; /* Width of the circular line */
+}
+
+.index-content-styling{
+    text-align: center;
+    margin: auto; /* Centers the main content */
+}
+
 .index-content-grid {
     display: flex;
     justify-content: center; /* Keeps the grid centered */
@@ -271,6 +278,8 @@ footer {
     transition: border-left 0.5s;
 }
 
+
+
 /*System Theme Prefferences*/
 :root {
     /* Light theme colors */
@@ -278,8 +287,8 @@ footer {
     --text-color: black;
 
     /* Nav Styling */
-    --nav-color: #6986ac9d;
-    --nav-color-hover:#6986ac;
+    --nav-color: rgba(105, 134, 172, 0.616);
+    --nav-color-hover:rgba(105, 134, 172, 0.95);
 
     --hover-color: rgba(255, 255, 255, 0.23);
     --hover-blur: rgba(255, 255, 255, 0.6);
@@ -293,8 +302,8 @@ footer {
     --text-color: white;
 
     /* Nav Styling */
-    --nav-color: #34577eab;
-    --nav-color-hover:#34577e;
+    --nav-color: rgba(52, 87, 126, 0.671);
+    --nav-color-hover:rgba(52, 87, 126, 0.95);
     --hover-color: rgba(0, 0, 0, 0.23);
     --hover-blur: rgba(0, 0, 0, 0.6);
 
@@ -341,6 +350,10 @@ footer {
 
         /*Reposition on resize + Theme Shift*/
         transition: top 0.2s, background-color 0.5s;
+    }
+
+    .nav-blur{
+        height: 6.4em;
     }
 
     .hamburger-menu {
@@ -405,6 +418,10 @@ footer {
         z-index: -1; /* Ensure it doesn't block interaction with the link */
 
         transition: opacity 0.2s, box-shadow 0.2s;
+    }
+
+    .nav-links .current-page::before {
+        bottom: 10px; /* Decrease distance between underline and text*/
     }
 
     .navbar .nav-links {
