--- a/styles.css
+++ b/styles.css
@@ -332,6 +332,7 @@ footer {
 .experience {
     text-align: left;
     margin: auto;
+    flex-basis: 0%;
     flex-grow: 1;
     padding-left: 20px;
 }
@@ -560,7 +561,6 @@ footer {
     }
 
     .end-date.present {
-        color: red;
         top:1px
     }
 
