--- a/styles.css
+++ b/styles.css
@@ -295,6 +295,8 @@ footer {
     z-index: 1;
     background-color: var(--text-color);
     border-radius: 50%;
+
+    transition: background-color 0.5s;
 }
 
 .timeline.present::before{
